# flexai_backend

./: Makefile  README.md  alembic.ini  env.dev  notes  pyproject.toml  run.py
app/: main.py
app/admin/model/: user.py
app/admin/router/: __init__.py  auth_router.py
app/admin/service/: auth_service.py
app/admin/templates/: add_role.html  add_user.html  base.html  dashboard.html  edit_role.html  edit_user.html  generic_content.html  login.html  users_list.html
app/api/: __init__.py
app/api/model/: __init__.py  user.py
app/api/router/: auth_router.py  user_router.py
app/authentication/constant/: auth_enum.py
app/authentication/model/: user.py
app/authentication/router/: auth_router.py  user_router.py
app/authentication/service/: auth_service.py  external_auth_service.py  user_service.py
app/constant/: application_constant.py  application_enum.py
app/core/: auth.py  auth_method.py  config.py  email_server.py  security.py
app/db/: database_engine.py  orm.py  permission.py  permission_mixin.py  unit_of_work.py
app/db/migrations/: env.py
app/db/migrations/versions/: 27a881adae7f_init_insert_permission_table.py  2de224550e7a_init_user_and_permission.py  6f9530f462f3_init_users.py  b544f4196914_insert_initial_permission_data.py  c300c2048f35_create_user.py  edacaaaf1c7e_initial_tables.py
app/db/migrations/versions/scripts/: sql_scripts.sql
app/db/repository/: irepository.py  sqlalchemy_repository.py
app/service/: iauth_service.py  iuser_service.py
app/service/impl/: auth_service.py  external_auth_service.py  user_service.py
